--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+ @import '~bootstrap/dist/css/bootstrap.css';
+html,body{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    min-height:96vh;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
