updated inventory part

--- a/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -19,15 +19,15 @@
                 <li routerLink="Inventories" routerLinkActive="active">
                     <mat-icon>info</mat-icon> Inventory
                 </li>
-                <li routerLink="TransferRequest" routerLinkActive="active">
+                <!-- <li routerLink="TransferRequest" routerLinkActive="active">
                     <mat-icon>info</mat-icon> Transfer Requests
-                </li>
+                </li> -->
                 <li routerLink="Deliveries" routerLinkActive="active">
                     <mat-icon>info</mat-icon> Pending Deliveries
                 </li>
-                <li routerLink="Warehouses" routerLinkActive="active">
+                <!-- <li routerLink="Warehouses" routerLinkActive="active">
                     <mat-icon>info</mat-icon> WareHouse
-                </li>
+                </li> -->
             </ul>
         </nav>
     </mat-drawer>
