--- a/src/app/Components/user-inventory/user-inventory.component.html
+++ b/src/app/Components/user-inventory/user-inventory.component.html
@@ -7,7 +7,7 @@
     <div class="inventory">
         <div class="otherInfo">
             <h1>Your Inventory</h1>
-            <div>
+            <!-- <div>
                 <p>Location: {{myInventory?.location}}</p>
                 <form>
                     <select name="destination">
@@ -18,7 +18,7 @@
                     </select>
                     <button class="btn btn-warning">Transfer Inventory</button>
                 </form>
-            </div>
+            </div> -->
         </div>
         <div class="items">
             <div class="item" *ngFor="let item of inventoryItems; index as i">
