--- a/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -14,16 +14,16 @@
         <nav>
             <ul class="navSide">
                 <li routerLink="Orders" routerLinkActive="active">
-                    <mat-icon>add</mat-icon> Orders
+                    <mat-icon>description</mat-icon> Orders
                 </li>
                 <li routerLink="Inventories" routerLinkActive="active">
-                    <mat-icon>info</mat-icon> Inventory
+                    <mat-icon>dns</mat-icon> Inventory
                 </li>
                 <!-- <li routerLink="TransferRequest" routerLinkActive="active">
                     <mat-icon>info</mat-icon> Transfer Requests
                 </li> -->
                 <li routerLink="Deliveries" routerLinkActive="active">
-                    <mat-icon>info</mat-icon> Pending Deliveries
+                    <mat-icon>flight_takeoff</mat-icon> Pending Deliveries
                 </li>
                 <!-- <li routerLink="Warehouses" routerLinkActive="active">
                     <mat-icon>info</mat-icon> WareHouse
