--- a/src/app/Components/user-dashboard/user-dashboard.component.html
+++ b/src/app/Components/user-dashboard/user-dashboard.component.html
@@ -20,10 +20,10 @@
                     <mat-icon>info</mat-icon> Orders
                 </li>
                 <li routerLink="inventory" routerLinkActive="active">
-                    <mat-icon>add</mat-icon> Inventory
+                    <mat-icon>dns</mat-icon> Inventory
                 </li>
                 <li routerLink="notification" routerLinkActive="active">
-                    <mat-icon>dashboard</mat-icon> Notification
+                    <mat-icon>notifications</mat-icon> Notification
                 </li>
             </ul>
         </nav>
